--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,21 +1,87 @@
-h1 a {
-  color: #303F56;
+*{
+      font-family: 'Maven Pro', sans-serif;
 }
 
-h1 a:hover {
+h1 a{
+  color: #303F56;
+  text-decoration: line-through;
+  font-size: 3em;
+  font-family: 'Abril Fatface', cursive;
+}
+
+h1 a:hover{
+  color: #fff;
+  text-decoration: line-through;
+  font-size: 3em;
+  font-family: 'Abril Fatface', cursive;
+}
+
+h2 {
+  color: #303F56;
+  text-decoration: none;
+  font-size: 2em;
+  font-family: 'Abril Fatface', cursive;
+}
+
+h2 a {
+  color: #303F56;
+  text-decoration: none;
+  font-size: 2em;
+  font-family: 'Abril Fatface', cursive;
+}
+
+h2 a:hover {
   color: #F1CC8D;
+  text-decoration: line-through;
+  font-family: 'Abril Fatface', cursive;
 }
 
 p {
-  color: #303F56;
+  color: #B0BEC7;
 }
 
 body {
-  background-color: #78B0F1;
+  background-color: #D21E33;
 }
 
-.post-basic{
-  padding: 10px;
-  margin-top: 10px;
-  background-color: #72BCFA;
+.autore{
+  color: #303F56;
+  font-variant: small-caps;
+  font-weight: bold;
+}
+
+.page-header {
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin: 0 auto;
+    border-bottom: none;
+    text-align: center;
+}
+
+.post{
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 30px;
+  padding-top: 20px;
+  margin-top: 30px;
+  background-color: #fff;
+  border: 2px solid #fff;
+  border-radius: 25px;
+}
+
+.date{
+  font-size: 0.8em;
+  font-weight: bold;
+  padding: 0;
+  margin-bottom: 10px;
+  margin-top: 0;
+  color: #D21E33;
+}
+
+.container{
+  margin-bottom: 30px;
+}
+
+.info{
+  padding-bottom: 10px;
 }
