--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,19 @@
-{% load staticfiles %}
-<html>
-    <head>
-        <title>Django Girls blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    </head>
-    <body>
-      <div>
-        <h1><a href="/">Django Girls Blog</a></h1>
-      </div>
+{% extends 'blog/base.html' %}
 
-{% for post in posts %}
-    <div class="post-basic">
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endfor %}
-    </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+    <div class="col-md-4">
+        <div class="post">
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <div class="info">
+              <span class="autore">{{ post.author }}</span>
+              <span class="date">
+                {{ post.published_date }}
+            </span>
+          </div>
+
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+        </div>
+    {% endfor %}
+{% endblock %}
