--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,4 +13,5 @@
         {% endif %}
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
+    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
 {% endblock %}
